# dl-yolo-tutorials

./: .gitignore  README.md  pyproject.toml
dl/: Check_Env.ipynb  Data_Preprocessing.ipynb  Data_Preprocessing.py  Iris_Model.pt  Iris_NN_Model.pt  L14-L14_CNN_w_MNIST.ipynb  L14-L14_CNN_w_MNIST.py  L14-L17_CNN_w_MNIST.ipynb  L14-L18_CNN_w_MNIST.ipynb  L14-L19_CNN_w_MNIST.ipynb  L2-L4_Tensor_Basic_Operation.ipynb  L3_Tensor_Operations.py  L4_Tensor_Math_Operations.py  L5-L7_Neural_Network.py  L5-L8_Neural_Network.py  L5-L9_FC_NN_w_Iris.ipynb  L5-L9_Neural_Network_w_Iris.py  L5_Create_a_Basic_Neural_Network.py  L6_Load_Data_and_Train_Neural_Network_Model.py  MNIST.pt  NN_w_Water_Quailty.py  README.md  Tensor.py  Test.py  Test_on_CNN.py  check_installation.py  draw.ipynb  pyproject.toml
dl/Model/: MNIST.pt
dl/lectures/: 14-19_cnn_w_MNIST.ipynb  1_data_preprocessing.ipynb  5-9_fc_nn_w_iris.ipynb
dl/models/: MNIST.pt
dl/projects/: nn_w_water_quality.py  test_on_cnn.py
lectures/: dl_0_check_env.ipynb  dl_14-19_cnn_w_MNIST.ipynb  dl_1_data_preprocessing.ipynb  dl_2-4_tensor_basic_operation.ipynb  dl_5-9_fc_nn_w_iris.ipynb  yolo_1_running_yolo.py  (+1 more)
models/: IRIS.pt
yolo/: .gitignore  L1_Running_Yolo.py  L2_Yolo_w_Webcam.ipynb  L2_Yolo_w_Webcam.py  Lecture 1: Running Yolo.ipynb  P1_Car_Counter.py  P2_People_Counter.py  P3_PPE_Detector.py  README.md  environment.yml  pyproject.toml
yolo/Yolo_Models/: notes.md
yolo/datasets/construction_site_safety/: data.yaml
yolo/lectures/: 1_running_yolo.py  2_yolo_w_webcam.py
yolo/projects/: 1_car_counter.py  2_people_counter.py  3.1_ppe_detector_training.py  3.2_ppe_detector_deploy.py  3_ppe_detector_training_colab.ipynb
(+8 files in other folders)
