[project]
name = "dl-yolo-tutorials"
version = "0.1.0"
description = "Hands-on tutorials for deep learning with PyTorch and object detection with YOLO."
readme = "README.md"
license = "MIT"
authors = [{ name = "Waining Ceoi" }]
requires-python = ">=3.14"
dependencies = [
    "lap>=0.5.13",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "shapely>=2.1.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "ultralytics>=8.4.38",
]
