[project]
name = "yolo-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "label-studio>=1.21.0",
    "lap>=0.5.13",
    "numpy==1.26.4",
    "shapely>=2.1.2",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "ultralytics>=8.4.38",
]
